--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -1636,7 +1636,7 @@
         "id": "4yDJu2bNmXAT",
         "outputId": "57c81dbb-428c-4796-b55c-89d7d4468981"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1645,6 +1645,136 @@
             "Diginte um número inteiro para calcular o fatorial: 5\n",
             "5! = 5 x 4 x 3 x 2 x 1 = 120"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 61: Refaça o DESAFIO 51, lendo o primeiro termo e a razão de uma PA,\n",
+        "# mostrando os 10 primeiros termos da progressão usando a estrutura while.\n",
+        "# by geanclm in 10/03/2022 at 06:43h\n",
+        "\n",
+        "n = int(input(f'''Digite o primeiro termo da PA: '''))\n",
+        "r = int(input(f'''Razão da PA: '''))\n",
+        "an = int(input(f'Números de termos: '))\n",
+        "\n",
+        "limite = n+(an-1)*r\n",
+        "\n",
+        "while n <= limite:\n",
+        "    print (n, end=' ')\n",
+        "    n += r    \n",
+        "print ('ACABOU!')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A4UlwN7lLM3x",
+        "outputId": "0c20329f-a7d7-47a3-91f1-64bb9f761a43"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o primeiro termo da PA: 0\n",
+            "Razão da PA: 5\n",
+            "Números de termos: 10\n",
+            "0 5 10 15 20 25 30 35 40 45 ACABOU!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 62: Melhore o DESAFIO 61,\n",
+        "# perguntando para o usuário se ele quer mostrar mais alguns termos.\n",
+        "# O programa encerrará quando ele disser que quer mostrar 0 termos.\n",
+        "# by geanclm in 10/03/2022 at 07:26h\n",
+        "\n",
+        "n = int(input(f'''Digite o primeiro termo da PA: '''))\n",
+        "r = int(input(f'''Razão da PA: '''))\n",
+        "nt = int(input(f'Números de termos: '))\n",
+        "limite = n+(nt-1)*r\n",
+        "continua =''\n",
+        "tt = nt\n",
+        "\n",
+        "while continua != 'N':\n",
+        "    for i in range (n,limite+r,r):\n",
+        "        print (n, end=' ')\n",
+        "        n += r    \n",
+        "    print ('PAUSA\\n')\n",
+        "    continua = str(input('Deseja continuar? [S/N]: ')).strip().upper()[0]\n",
+        "    if continua == 'S':\n",
+        "       nt = int(input(f'''Quantos termos quer mostrar a mais? '''))\n",
+        "       tt += nt\n",
+        "       limite = n+(nt-1)*r\n",
+        "       for i in range (n,limite+r,r):\n",
+        "        print (n, end=' ')\n",
+        "        n += r    \n",
+        "print ('ACABOU!\\n')\n",
+        "print (f'O programa gerou o total de {tt} termos PA')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZCl8iHLgQro4",
+        "outputId": "a959ebf7-9e7a-4611-8e48-e1297a5dbec4"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o primeiro termo da PA: 2\n",
+            "Razão da PA: 2\n",
+            "Números de termos: 10\n",
+            "2 4 6 8 10 12 14 16 18 20 PAUSA\n",
+            "\n",
+            "Deseja continuar? [S/N]: S\n",
+            "Quantos termos quer mostrar a mais? 5\n",
+            "22 24 26 28 30 PAUSA\n",
+            "\n",
+            "Deseja continuar? [S/N]: S\n",
+            "Quantos termos quer mostrar a mais? 20\n",
+            "32 34 36 38 40 42 44 46 48 50 52 54 56 58 60 62 64 66 68 70 PAUSA\n",
+            "\n",
+            "Deseja continuar? [S/N]: N\n",
+            "ACABOU!\n",
+            "\n",
+            "O programa gerou o total de 35 termos PA\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8ZD5AGJfSm3A",
+        "outputId": "3df4d9de-f47d-4168-b898-079bc9241af7"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     }
