--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -1673,7 +1673,7 @@
         "id": "A4UlwN7lLM3x",
         "outputId": "0c20329f-a7d7-47a3-91f1-64bb9f761a43"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1725,7 +1725,7 @@
         "id": "ZCl8iHLgQro4",
         "outputId": "a959ebf7-9e7a-4611-8e48-e1297a5dbec4"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1755,28 +1755,68 @@
     {
       "cell_type": "code",
       "source": [
-        "n"
+        "# nExercício Python 63: Escreva um programa que leia um número N inteiro qualquer\n",
+        "# e mostre na tela os N primeiros elementos de uma Sequência de Fibonacci. Exemplo:\n",
+        "# 0 – 1 – 1 – 2 – 3 – 5 – 8 \n",
+        "# by geanclm by 12/03/2022 at 07:34h\n",
+        "\n",
+        "n = int(input('Digite uma quantidade de termos para gerar a série Fibonacci: '))\n",
+        "print ('-' * 20)\n",
+        "print ('Sequência Fibonacci')\n",
+        "print ('-' * 20)\n",
+        "c, n1, n2 = 0, 0, 1\n",
+        "print (f'{n1} → {n2}', end=' ')\n",
+        "while c <= n-3:\n",
+        "    n3 = n1+n2\n",
+        "    print (f'→ {n3}', end=' ')\n",
+        "    c += 1\n",
+        "    n1 = n2\n",
+        "    n2 = n3\n",
+        "print ('→ FIM')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8ZD5AGJfSm3A",
-        "outputId": "3df4d9de-f47d-4168-b898-079bc9241af7"
+        "outputId": "93f604b0-b752-4a3a-8513-e24d2f152eb1"
       },
-      "execution_count": 17,
+      "execution_count": 63,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "11"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 17
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite uma quantidade de termos para gerar a série Fibonacci: 10\n",
+            "--------------------\n",
+            "Sequência Fibonacci\n",
+            "--------------------\n",
+            "0 → 1 → 1 → 2 → 3 → 5 → 8 → 13 → 21 → 34 → FIM\n"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "snjYuy-WwdYt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "QfM1T9Vqvo8E"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
