--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -1772,26 +1772,207 @@
         "    c += 1\n",
         "    n1 = n2\n",
         "    n2 = n3\n",
-        "print ('→ FIM')"
+        "# print ('→ FIM')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8ZD5AGJfSm3A",
-        "outputId": "93f604b0-b752-4a3a-8513-e24d2f152eb1"
+        "outputId": "b363c942-7186-410a-9b6a-0d4ba9af47ca"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite uma quantidade de termos para gerar a série Fibonacci: 10\n",
+            "Digite uma quantidade de termos para gerar a série Fibonacci: 19\n",
             "--------------------\n",
             "Sequência Fibonacci\n",
             "--------------------\n",
-            "0 → 1 → 1 → 2 → 3 → 5 → 8 → 13 → 21 → 34 → FIM\n"
+            "0 → 1 → 1 → 2 → 3 → 5 → 8 → 13 → 21 → 34 → 55 → 89 → 144 → 233 → 377 → 610 → 987 → 1597 → 2584 → FIM\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 64: Crie um programa que leia vários números inteiros pelo teclado.\n",
+        "# O programa só vai parar quando o usuário digitar o valor 999, que é a condição de parada.\n",
+        "# No final, mostre quantos números foram digitados e qual foi a soma entre eles (desconsiderando o flag).\n",
+        "# by geanclm in 14/03/2022 at 13:29h\n",
+        "n,c,soma = 0,0,0 \n",
+        "while n != 999:\n",
+        "    n = int(input('Digite um número inteiro ou [999] para sair: '))\n",
+        "    if n != 999:\n",
+        "        c += 1\n",
+        "        soma += n\n",
+        "print (f'''\n",
+        "Foram digitados {c} números e a soma é {soma}\n",
+        "ACABOU!''')"
+      ],
+      "metadata": {
+        "id": "snjYuy-WwdYt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2bcba8e3-1e0b-4c94-8c00-0b8184286244"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número inteiro ou [999] para sair: 1\n",
+            "Digite um número inteiro ou [999] para sair: 2\n",
+            "Digite um número inteiro ou [999] para sair: 3\n",
+            "Digite um número inteiro ou [999] para sair: 4\n",
+            "Digite um número inteiro ou [999] para sair: 999\n",
+            "\n",
+            "Foram digitados 4 números e a soma é 10\n",
+            "ACABOU!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 65: Crie um programa que leia vários números inteiros pelo teclado.\n",
+        "# No final da execução, mostre a média entre todos os valores e qual foi o maior e o menor valores lidos.\n",
+        "# O programa deve perguntar ao usuário se ele quer ou não continuar a digitar valores.\n",
+        "# by geanclm in 14/03/2022 at 14:04h\n",
+        "\n",
+        "c = soma = menor = maior = 0\n",
+        "continua = ''\n",
+        "while continua in 'Ss':\n",
+        "    n = int(input('Digite um número inteiro: '))\n",
+        "    c += 1\n",
+        "    soma += n\n",
+        "    if menor == 0:\n",
+        "            menor = n\n",
+        "    else:\n",
+        "        if n > maior:\n",
+        "            maior = n\n",
+        "        if n < menor:\n",
+        "            menor = m\n",
+        "    continua = str(input('Deseja continuar? [S/N]: ')).strip().upper()[0]\n",
+        "m = soma/c\n",
+        "print ('-' * 20)\n",
+        "print (f'''Quantidade de números digitados: {c}\n",
+        "Soma dos números: {soma}\n",
+        "Média: {m}\n",
+        "Maior número: {maior}\n",
+        "Menor número: {menor}''')"
+      ],
+      "metadata": {
+        "id": "QfM1T9Vqvo8E",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eafd2d37-e3ae-4bb1-998c-5bb7f9450111"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número inteiro: 4\n",
+            "Deseja continuar? [S/N]: s\n",
+            "Digite um número inteiro: 2\n",
+            "Deseja continuar? [S/N]: s\n",
+            "Digite um número inteiro: 1\n",
+            "Deseja continuar? [S/N]: s\n",
+            "Digite um número inteiro: 4\n",
+            "Deseja continuar? [S/N]: n\n",
+            "--------------------\n",
+            "Quantidade de números digitados: 4\n",
+            "Soma dos números: 11\n",
+            "Média: 2.75\n",
+            "Maior número: 4\n",
+            "Menor número: 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Aula 15 – Interrompendo repetições while"
+      ],
+      "metadata": {
+        "id": "mbewRpK9brMF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 66: Crie um programa que leia números inteiros pelo teclado.\n",
+        "# O programa só vai parar quando o usuário digitar o valor 999, que é a condição de parada.\n",
+        "# No final, mostre quantos números foram digitados e qual foi a soma entre elas (desconsiderando o flag).\n",
+        "\n",
+        "soma = c = 0\n",
+        "while True:\n",
+        "    n = int(input('Digite um número inteiro: '))\n",
+        "    continua = str(input('Deseja continuar? [S/N]: ')).strip().upper()[0]\n",
+        "    c += 1\n",
+        "    soma += n\n",
+        "    if continua in 'Nn':\n",
+        "        break\n",
+        "print ('-' * 20)\n",
+        "print (f'''Quantidade de números digitados: {c}\n",
+        "Soma dos números: {soma}''')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LrfsKMkibyx5",
+        "outputId": "f74e1ed3-cf1d-4a1b-8aa7-2de3ecc4f9af"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número inteiro: 2\n",
+            "Deseja continuar? [S/N]: s\n",
+            "Digite um número inteiro: 4\n",
+            "Deseja continuar? [S/N]: s\n",
+            "Digite um número inteiro: 8\n",
+            "Deseja continuar? [S/N]: n\n",
+            "--------------------\n",
+            "Quantidade de números digitados: 3\n",
+            "Soma dos números: 14\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nome = 'geanclm at 14/03/2022'\n",
+        "print (f'{nome:->20}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T7ZFiIkfpOcM",
+        "outputId": "7d3c5dfd-0736-40d4-f95c-a936398be577"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "geanclm at 14/03/2022\n"
           ]
         }
       ]
@@ -1802,18 +1983,7 @@
         ""
       ],
       "metadata": {
-        "id": "snjYuy-WwdYt"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "QfM1T9Vqvo8E"
+        "id": "3DWaN15KpgIo"
       },
       "execution_count": null,
       "outputs": []
