--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -1820,7 +1820,7 @@
         },
         "outputId": "2bcba8e3-1e0b-4c94-8c00-0b8184286244"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1875,7 +1875,7 @@
         },
         "outputId": "eafd2d37-e3ae-4bb1-998c-5bb7f9450111"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1914,14 +1914,14 @@
         "# Exercício Python 66: Crie um programa que leia números inteiros pelo teclado.\n",
         "# O programa só vai parar quando o usuário digitar o valor 999, que é a condição de parada.\n",
         "# No final, mostre quantos números foram digitados e qual foi a soma entre elas (desconsiderando o flag).\n",
-        "\n",
+        "# by geanclm in 15/03/2022 at 06:10h\n",
         "soma = c = 0\n",
         "while True:\n",
-        "    n = int(input('Digite um número inteiro: '))\n",
-        "    continua = str(input('Deseja continuar? [S/N]: ')).strip().upper()[0]\n",
-        "    c += 1\n",
-        "    soma += n\n",
-        "    if continua in 'Nn':\n",
+        "    n = int(input('Digite um número - [999 para sair]: '))    \n",
+        "    if n != 999:\n",
+        "        c += 1\n",
+        "        soma += n\n",
+        "    else:\n",
         "        break\n",
         "print ('-' * 20)\n",
         "print (f'''Quantidade de números digitados: {c}\n",
@@ -1932,23 +1932,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LrfsKMkibyx5",
-        "outputId": "f74e1ed3-cf1d-4a1b-8aa7-2de3ecc4f9af"
+        "outputId": "fd6b77eb-4e94-4b28-d349-ab57e9e59932"
       },
-      "execution_count": 42,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite um número inteiro: 2\n",
-            "Deseja continuar? [S/N]: s\n",
-            "Digite um número inteiro: 4\n",
-            "Deseja continuar? [S/N]: s\n",
-            "Digite um número inteiro: 8\n",
-            "Deseja continuar? [S/N]: n\n",
+            "Digite um número - [999 para sair]: 1\n",
+            "Digite um número - [999 para sair]: 2\n",
+            "Digite um número - [999 para sair]: 3\n",
+            "Digite um número - [999 para sair]: 999\n",
             "--------------------\n",
             "Quantidade de números digitados: 3\n",
-            "Soma dos números: 14\n"
+            "Soma dos números: 6\n"
           ]
         }
       ]
@@ -1966,7 +1964,7 @@
         "id": "T7ZFiIkfpOcM",
         "outputId": "7d3c5dfd-0736-40d4-f95c-a936398be577"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1980,13 +1978,59 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Exercício Python 67: Faça um programa que mostre a tabuada de vários números,\n",
+        "# um de cada vez, para cada valor digitado pelo usuário.\n",
+        "# O programa será interrompido quando o número solicitado for negativo.\n",
+        "# by geanclm in 15/03/2022 at 06:28h\n",
+        "n = 0\n",
+        "while True:\n",
+        "    n = int(input('Digite um número para gerar a tabuada - [negativo para sair]: '))\n",
+        "    if n >= 0:\n",
+        "        print (' ')\n",
+        "        print ('-' * 13)\n",
+        "        print (f'TABUADA DE {n}')\n",
+        "        print ('-' * 13)\n",
+        "        for i in range (1,11):\n",
+        "            print (f'{n} x {i} = {i*n}')\n",
+        "        print ('-' * 13)\n",
+        "    else:\n",
+        "        break\n",
+        "print ('FIM DO PROGRAMA!')"
       ],
       "metadata": {
-        "id": "3DWaN15KpgIo"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mnLZYjIh3xD0",
+        "outputId": "710a144f-fb97-419a-ab9f-f9661f6a028d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número para gerar a tabuada - [negativo para sair]: 2\n",
+            " \n",
+            "-------------\n",
+            "TABUADA DE 2\n",
+            "-------------\n",
+            "2 x 1 = 2\n",
+            "2 x 2 = 4\n",
+            "2 x 3 = 6\n",
+            "2 x 4 = 8\n",
+            "2 x 5 = 10\n",
+            "2 x 6 = 12\n",
+            "2 x 7 = 14\n",
+            "2 x 8 = 16\n",
+            "2 x 9 = 18\n",
+            "2 x 10 = 20\n",
+            "-------------\n",
+            "Digite um número para gerar a tabuada - [negativo para sair]: -1\n",
+            "FIM DO PROGRAMA!\n"
+          ]
+        }
+      ]
     }
   ]
 }
