--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -1934,7 +1934,7 @@
         "id": "LrfsKMkibyx5",
         "outputId": "fd6b77eb-4e94-4b28-d349-ab57e9e59932"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2004,7 +2004,7 @@
         "id": "mnLZYjIh3xD0",
         "outputId": "710a144f-fb97-419a-ab9f-f9661f6a028d"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2028,6 +2028,196 @@
             "-------------\n",
             "Digite um número para gerar a tabuada - [negativo para sair]: -1\n",
             "FIM DO PROGRAMA!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 68: Faça um programa que jogue par ou ímpar com o computador.\n",
+        "# O jogo só será interrompido quando o jogador perder,\n",
+        "# mostrando o total de vitórias consecutivas que ele conquistou no final do jogo.\n",
+        "# --------------------\n",
+        "# JOGO do PAR ou ÍMPAR\n",
+        "# --------------------\n",
+        "# by geanclm in 16/03/2022 at 06:37h\n",
+        "\n",
+        "from random import randint\n",
+        "c = 0\n",
+        "while True:\n",
+        "    tipo = ' '\n",
+        "    soma = 0\n",
+        "    computador = randint(0,11)\n",
+        "    humano = int(input('digite um número inteiro: '))\n",
+        "    soma = computador + humano\n",
+        "\n",
+        "    while tipo not in 'PI':\n",
+        "        tipo = str(input('PAR ou ÍMPAR? [P/I]: ')).strip().upper()[0]\n",
+        "\n",
+        "\n",
+        "    print ('RESULTADO PAR' if soma%2 == 0 else 'RESULTADO ÍMPAR')\n",
+        "    print (' ')\n",
+        "    print ('-' * 20)\n",
+        "    print ('JOGO do PAR ou ÍMPAR')\n",
+        "    print ('HUMANO X MÁQUINA')\n",
+        "    print ('-' * 20)\n",
+        "    print (' ')\n",
+        "\n",
+        "    # enquanto humano acertar o jogo continua\n",
+        "    if tipo == 'P':\n",
+        "        if soma%2 == 0:\n",
+        "            print ('HUMANO vencedor!')\n",
+        "            c += 1\n",
+        "        else:\n",
+        "            print ('COMPUTADOR vencedor!')\n",
+        "            print (f'Aposta COMPUTADOR: {computador}')\n",
+        "            print (f'soma: {soma}')\n",
+        "            break\n",
+        "    elif tipo == 'I':\n",
+        "        if soma%2 == 1:\n",
+        "            print ('HUMANO vencedor!')\n",
+        "            c += 1\n",
+        "        else:\n",
+        "            print ('COMPUTADOR vencedor!')\n",
+        "            print (f'Aposta COMPUTADOR: {computador}')\n",
+        "            print (f'soma: {soma}')\n",
+        "            break\n",
+        "    print (f'''\n",
+        "            Aposta HUMANO: {humano}\n",
+        "            Aposta COMPUTADOR {computador}\n",
+        "            soma: {soma}\n",
+        "            Humano venceu {c} vez(es)\n",
+        "            - - -\n",
+        "            Vamos novamente...\n",
+        "            ''')\n",
+        "\n",
+        "print (f'''FIM DE JOGO!\n",
+        "Total de pontos HUMANO: {c}''')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P7mekUn691-G",
+        "outputId": "5b848734-1774-4c3c-8cef-dde857a383df"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite um número inteiro: 9\n",
+            "PAR ou ÍMPAR? [P/I]: P\n",
+            "RESULTADO PAR\n",
+            " \n",
+            "--------------------\n",
+            "JOGO do PAR ou ÍMPAR\n",
+            "HUMANO X MÁQUINA\n",
+            "--------------------\n",
+            " \n",
+            "HUMANO vencedor!\n",
+            "\n",
+            "            Aposta HUMANO: 9\n",
+            "            Aposta COMPUTADOR 3\n",
+            "            soma: 12\n",
+            "            Humano venceu 1 vez(es)\n",
+            "            - - -\n",
+            "            Vamos novamente...\n",
+            "            \n",
+            "digite um número inteiro: 9\n",
+            "PAR ou ÍMPAR? [P/I]: P\n",
+            "RESULTADO PAR\n",
+            " \n",
+            "--------------------\n",
+            "JOGO do PAR ou ÍMPAR\n",
+            "HUMANO X MÁQUINA\n",
+            "--------------------\n",
+            " \n",
+            "HUMANO vencedor!\n",
+            "\n",
+            "            Aposta HUMANO: 9\n",
+            "            Aposta COMPUTADOR 3\n",
+            "            soma: 12\n",
+            "            Humano venceu 2 vez(es)\n",
+            "            - - -\n",
+            "            Vamos novamente...\n",
+            "            \n",
+            "digite um número inteiro: 9\n",
+            "PAR ou ÍMPAR? [P/I]: I\n",
+            "RESULTADO PAR\n",
+            " \n",
+            "--------------------\n",
+            "JOGO do PAR ou ÍMPAR\n",
+            "HUMANO X MÁQUINA\n",
+            "--------------------\n",
+            " \n",
+            "COMPUTADOR vencedor!\n",
+            "Aposta COMPUTADOR: 9\n",
+            "soma: 18\n",
+            "FIM DE JOGO!\n",
+            "Total de pontos HUMANO: 2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 69: Crie um programa que leia a idade e o sexo de várias pessoas.\n",
+        "# A cada pessoa cadastrada, o programa deverá perguntar se o usuário quer ou não continuar.\n",
+        "# No final, mostre:\n",
+        "# A) quantas pessoas tem mais de 18 anos.\n",
+        "# B) quantos homens foram cadastrados.\n",
+        "# C) quantas mulheres tem menos de 20 anos.\n",
+        "# by geanclm in 17/03/2022 at 06:37h\n",
+        "\n",
+        "continua = ' '\n",
+        "h = m20 = i18 = 0\n",
+        "while True:\n",
+        "    idade = int(input('idade: '))\n",
+        "    sexo = ' '\n",
+        "    while sexo not in 'MF': \n",
+        "        sexo = str(input('sexo [M/F]: ')).strip().upper()[0]\n",
+        "    if (sexo == 'F') and idade < 20:\n",
+        "        m20 += 1\n",
+        "    if sexo == 'M':\n",
+        "        h += 1\n",
+        "    if idade > 18:\n",
+        "        i18 += 1\n",
+        "    while continua not in 'SN':\n",
+        "        continua = str(input('continua? [S/N]: ')).strip().upper()[0]\n",
+        "    if continua == 'N':\n",
+        "        break\n",
+        "print ('-' * 30)\n",
+        "print (f'DADOS CADASTRADOS')\n",
+        "print (f'PESSOAS ACIMA DE 18 ANOS: {i18}')\n",
+        "print (f'TOTAL DE HOMENS: {h}')\n",
+        "print (f'MULHERES COM MENOS DE 20 ANOS DE IDADE: {m20}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V8OtG1LeH4Q-",
+        "outputId": "0a4b8464-1d42-4675-a174-b0d5a8f1f648"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "idade: 46\n",
+            "sexo [M/F]: M\n",
+            "continua? [S/N]:R\n",
+            "continua? [S/N]:N\n",
+            "------------------------------\n",
+            "DADOS CADASTRADOS\n",
+            "PESSOAS ACIMA DE 18 ANOS: 1\n",
+            "TOTAL DE HOMENS: 1\n",
+            "MULHERES COM MENOS DE 20 ANOS DE IDADE: 0\n"
           ]
         }
       ]
