--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -2203,7 +2203,7 @@
         "id": "V8OtG1LeH4Q-",
         "outputId": "0a4b8464-1d42-4675-a174-b0d5a8f1f648"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2219,6 +2219,107 @@
             "TOTAL DE HOMENS: 1\n",
             "MULHERES COM MENOS DE 20 ANOS DE IDADE: 0\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 70: Crie um programa que leia\n",
+        "# o nome\n",
+        "# e\n",
+        "# o preço\n",
+        "# de vários produtos. O programa deverá perguntar se o usuário vai continuar ou não. No final, mostre:\n",
+        "# A) qual é o total gasto na compra.\n",
+        "# B) quantos produtos custam mais de R$1000.\n",
+        "# C) qual é o nome do produto mais barato.\n",
+        "# by geanclm in 18/03/2022 at 19:49h\n",
+        "nome_produto_mais_barato = ' '\n",
+        "total_compra = custo_un_1000 = menor_preco_de_produto = 0\n",
+        "while True:\n",
+        "    continua = ' '\n",
+        "    nome_produto = str(input('produto: '))\n",
+        "    prec_produto = float(input('preço R$: '))\n",
+        "    total_compra += prec_produto\n",
+        "    if menor_preco_de_produto == 0 or prec_produto < menor_preco_de_produto:\n",
+        "        menor_preco_de_produto = prec_produto\n",
+        "        nome_produto_mais_barato = nome_produto\n",
+        "    if prec_produto > 1000:\n",
+        "        custo_un_1000 += 1\n",
+        "    while continua not in 'NS':\n",
+        "        continua = str(input('continua? [S/N]: ')).strip().upper()[0]\n",
+        "    if continua == 'N':\n",
+        "        break\n",
+        "print ('-' * 33)\n",
+        "print ('LOJÃO BARATO DEMAIS!')\n",
+        "print ('-' * 33)\n",
+        "print (f'TOTAL COMPRA: R$ {total_compra:,.2f}')\n",
+        "print (f'QUANT PRODUTOS ACIMA DE MIL REAIS: {custo_un_1000}')\n",
+        "print (f'O PRODUTO {nome_produto_mais_barato} É O MAIS BARATO E CUSTA: R$ {menor_preco_de_produto:,.2f}')\n",
+        "print (' ')\n",
+        "print ('{:-^40}'.format('| FIM DO PROGRAMA |'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nNcbDE9ECcTT",
+        "outputId": "65a1f5c5-f6e2-4815-9549-58d65a411a49"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "produto: borracha\n",
+            "preço R$: 1\n",
+            "continua? [S/N]: s\n",
+            "produto: caneta\n",
+            "preço R$: 2\n",
+            "continua? [S/N]: s\n",
+            "produto: celular\n",
+            "preço R$: 1500\n",
+            "continua? [S/N]: n\n",
+            "---------------------------------\n",
+            "LOJÃO BARATO DEMAIS!\n",
+            "---------------------------------\n",
+            "TOTAL COMPRA: R$ 1,503.00\n",
+            "QUANT PRODUTOS ACIMA DE MIL REAIS: 1\n",
+            "O PRODUTO borracha É O MAIS BARATO E CUSTA: R$ 1.00\n",
+            " \n",
+            "----------| FIM DO PROGRAMA |-----------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nome_produto_mais_barato"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "uezfOlnPUZcj",
+        "outputId": "2cca4d5e-c020-4148-df4b-0c17ef516b77"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "' '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 29
         }
       ]
     }
