--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -2266,7 +2266,7 @@
         "id": "nNcbDE9ECcTT",
         "outputId": "65a1f5c5-f6e2-4815-9549-58d65a411a49"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2296,30 +2296,106 @@
     {
       "cell_type": "code",
       "source": [
-        "nome_produto_mais_barato"
+        "# Exercício Python 071: Crie um programa que simule o funcionamento de um caixa eletrônico.\n",
+        "# No início, pergunte ao usuário qual será o valor a ser sacado (número inteiro) e o programa\n",
+        "# vai informar quantas cédulas de cada valor serão entregues.\n",
+        "# OBS: considere que o caixa possui cédulas de R$50, R$20, R$10 e R$1.\n",
+        "# by geanclm in 19/03/2022 at 10:02h\n",
+        "# ---\n",
+        "import time\n",
+        "from datetime import datetime, date\n",
+        "from pytz import timezone\n",
+        "\n",
+        "registro_data_e_hora_completo = time.ctime()\n",
+        "hoje = datetime.now()\n",
+        "fuso_horario = timezone(\"America/Sao_Paulo\")\n",
+        "data_e_hora = hoje.astimezone(fuso_horario)\n",
+        "agora = data_e_hora.strftime(\"%A %B %d/%m/%Y %H:%M\"+\"h\")\n",
+        "# ---\n",
+        "print ('=' * 33)\n",
+        "print ('{:-^33}'.format('| BANCO GCLM |'))\n",
+        "print ('=' * 33)\n",
+        "saque = int(input('Valor inteiro para saque: R$ '))\n",
+        "parcial = saque\n",
+        "c200 = c100 = c50 = c20 = c10 = c5 = c1 = 0\n",
+        "while True: # Obs: não precisa do laço na solução escrita aqui, apenas deixei pra lembrar da solução do Curso em Vídeo\n",
+        "    # --- CÁLCULO INTERNO DO CAIXA\n",
+        "    if parcial >= 200:\n",
+        "        c200 = int(parcial//200)\n",
+        "        parcial = parcial - (c200*200)\n",
+        "        m200 = f'{c200} cédula(s) de R$200,00'\n",
+        "    if parcial >= 100:\n",
+        "        c100 = int(parcial//100)\n",
+        "        parcial = parcial - (c100*100)\n",
+        "        m100 = f'{c100} cédula(s) de R$100,00'\n",
+        "    if parcial >= 50:\n",
+        "        c50 = int(parcial//50)\n",
+        "        parcial = parcial - (c50*50)\n",
+        "        m50 = f'{c50} cédula(s) de R$50,00'\n",
+        "    if parcial >= 20:\n",
+        "        c20 = int(parcial//20)\n",
+        "        parcial = parcial - (c20*20)\n",
+        "        m20 = f'{c20} cédula(s) de R$20,00'\n",
+        "    if parcial >= 10:\n",
+        "        c10 = int(parcial//10)\n",
+        "        parcial = parcial - (c10*10)\n",
+        "        m10 = f'{c10} cédula(s) de R$10,00'\n",
+        "    if parcial >= 5:\n",
+        "        c5 = int(parcial//5)\n",
+        "        parcial = parcial - (c5*5)\n",
+        "        m5 = f'{c5} cédula(s) de R$5,00'\n",
+        "    if parcial >= 1:\n",
+        "        c1 = int(parcial//1)\n",
+        "        parcial = parcial - (c1*1)\n",
+        "        m1 = f'{c1} cédula(s) de R$1,00'\n",
+        "    if parcial == 0: # pode ser removido sem afetar o resultado do programa (remover também o 'while True')\n",
+        "        break # pode ser removido sem afetar o resultado do programa (remover também o 'while True')\n",
+        "# ---\n",
+        "\n",
+        "print ('-' * 33)\n",
+        "print (f'TOTAL SAQUE: R$ {saque:,.2f}')\n",
+        "if c200 > 0:print (m200)\n",
+        "if c100 > 0:print (m100)\n",
+        "if c50 > 0:print (m50)\n",
+        "if c20 > 0:print (m20)\n",
+        "if c10 > 0:print (m10)\n",
+        "if c5 > 0:print (m5)\n",
+        "if c1 > 0:print (m1)\n",
+        "print ('.' * 33)\n",
+        "print (agora)\n",
+        "print ('.' * 33)\n",
+        "print (f'''Conte com a gente para investir,\n",
+        " render e prosperar!''')"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 36
+          "base_uri": "https://localhost:8080/"
         },
         "id": "uezfOlnPUZcj",
-        "outputId": "2cca4d5e-c020-4148-df4b-0c17ef516b77"
+        "outputId": "cbb23f92-ff0c-495a-a8ec-64cbc149667e"
       },
-      "execution_count": 29,
+      "execution_count": 80,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "' '"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 29
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=================================\n",
+            "---------| BANCO GCLM |----------\n",
+            "=================================\n",
+            "Valor inteiro para saque: R$ 228\n",
+            "---------------------------------\n",
+            "TOTAL SAQUE: R$ 228.00\n",
+            "1 cédula(s) de R$200,00\n",
+            "1 cédula(s) de R$20,00\n",
+            "1 cédula(s) de R$5,00\n",
+            "3 cédula(s) de R$1,00\n",
+            ".................................\n",
+            "Saturday March 19/03/2022 12:50h\n",
+            ".................................\n",
+            "Conte com a gente para investir,\n",
+            " render e prosperar!\n"
+          ]
         }
       ]
     }
